<resources>
    <string name="app_name">epam_internship_android_kalolo</string>

    <!-- Detail and List food customize -->
    <string name="detail_page_title">List item food</string>
    <string name="item_food_name">Name food</string>
    <string name="item_food_description">Description food </string>
    <string name="settings_menu">Setting</string>
    <string name="subhead">JAPANESE</string>
    <string name="headLine">Teriyaki Chicken Casserole</string>
    <string name="japanese">Meat</string>
    <string name="japanese2">Casserole</string>
    <string name="ingredient">INGREDIENTS</string>
    <string name="filterHead">Фильтер</string>
    <string name="filterName">Сортировка по алфавиту</string>
    <string name="filterButton1">По возрастанию</string>
    <string name="filterButton2">По убыванию</string>
    <string name="filterButton">ПРИМЕНИТЬ</string>
    <string name="SubIngredient">Soy sauce - 3/4 cup\n Water - 1/2 cup \n Brown sugar - 1/4 cup\n  Ground ginger - 1/2 teaspoon \n Minced garlic - 1/2 teaspoon\n  Cornstarch - 4 tablespoons\n  Chicken breasts - 2\n  Stir-fry vegetables - 1 (12 oz.) \n Brown rice - 3 cups</string>



</resources>