<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:theme="@style/Theme.AppCompat.NoActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageMeal"
                android:layout_width="wrap_content"
                android:layout_height="360dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_collapseMode="pin"/>

            <ImageButton
                android:id="@+id/imageToolbarBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:padding="@dimen/round_corner_top"
                android:src="@drawable/ic_baseline_arrow_back" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:background="@drawable/layout_background2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/subhead"
                style="@style/SubheadTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="36dp"
                android:text="@string/subhead"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/headline"
                style="@style/HeadLineTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/headLine"
                app:layout_constraintStart_toStartOf="@+id/subhead"
                app:layout_constraintTop_toBottomOf="@+id/subhead" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:backgroundTint="@color/uniform_70"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="@+id/headline"
                app:layout_constraintTop_toBottomOf="@+id/headline">

<!--                <TextView-->
<!--                    android:id="@+id/japanese"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="20dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:text="@string/japanese"-->
<!--                    style="@style/TextCard"/>-->
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/uniform_70"
                android:layout_marginTop="26dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView_text1">

                <TextView
                    android:id="@+id/ingredient"
                    style="@style/SubheadTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/ingredient"
                    app:layout_constraintStart_toStartOf="@+id/cardView_text1"
                    app:layout_constraintTop_toBottomOf="@+id/cardView_text1" />

             <TextView
                 android:id="@+id/subIngredient"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/SubIngredient"
                 android:layout_marginLeft="16dp"
                 android:layout_marginBottom="25dp"
                 style="@style/Ingredient"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>